assets/css/style.css
/* New way of importing google fonts */
@import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');

/* Import from fonts.google.com
/* @import url('https://fonts.googleapis.com/css2?family=Lato&family=Oswald&display=swap'); */

/* Set the padding, margin and border for all elements to zero */
*{
  margin: 0;
  padding: 0;
  border: 0;
}

/* Default font family and color - sans-serif backup */
html, body {
/*   height: 100%;
  width: 100%; */
  font-family: Lato, sans-serif;
  color: #777777;
}

/* Font overide for h2 */
h2{
  font-family: Oswald, sans-serif;
  text-transform: uppercase;
  letter-spacing: 4px;
  color: #555555;
}

/* Header styling for logo and navigation menu */
#logo{
  float: left;
  font-size: 280%;
  margin-left: 30px;
}

#menu{
  font-size: 110%;
  list-style-type: none;
  letter-spacing: 4px;
  float: right;
}

#logo, #menu{
  line-height: 75px;
}

#menu li{
/*   float: right; */
  float: left;
  margin-right: 30px;
}

#menu a{
  text-decoration: none;
  color: inherit;
}

#menu a:hover{
  border-bottom: 1px solid #777777;
}

.active{
  border-bottom: 1px solid #777777;
}

/* Hero image section styling with heading and cover text */
#hero-image{
  height: 600px;
  width: 100%;
  background: url("../images/hero-image.jpg") no-repeat center center;

  animation-name: hero-zoom;
  animation-duration: 5s;
  animation-fill-mode: forwards;
}

#hero-outer{
  height: 600px;
  width: 100%;
  overflow: hidden;
  position: relative;
}

@keyframes hero-zoom{
  from{
    transform: scale(1);
  }
  to{
    transform: scale(1.1);
  }  
}

#hero-heading{
  color: #000000;
  font-size: 280%;
  font-family: Oswald;
  text-transform: uppercase;
  letter-spacing: 4px;
  top: 30px;
  left: 50px;
  position: absolute;
}

#cover-text, #cover-text h2{
  color: #ffffff;
}

#cover-text{
  font-size: 130%;
  font-family: Oswald;
  text-transform: uppercase;
  letter-spacing: 4px;

  width: 300px;
  height: 200px;

  padding-top: 40px;
  padding-left: 10px;

  background-color: rgba(241, 107, 109, .7);
  
  bottom: 30px;
  right: 150px;
  position: absolute;
}

/* Groom ethos section styling with four ethos points around a central circular picture */
#groom-ethos{
  height: 500px;
}

#left-about{
  padding-top: 30px;
  width: 33%;
  float: left;
}

#right-about{
  padding-top: 30px;
  width: 33%;
  float: right;
}

#center-about{
  width: 33%;
  margin: 0 auto;
}

hr{
  border-top: 1px solid #777777;
  width: 100%;
  margin: 5px 0;
}

.left-about-heading, .right-about-heading{
  width: 50%;
  float: right;
  line-height: 20px;
  clear: both;
  margin-bottom: 50px;
}

.right-about-heading{
  float: left;
}

.right-about-heading h2{
  text-align: right;
}

.right-about-heading p{
  text-align: right;
}

#ethos-welcome{
  margin: 20px 0;
  text-align: center;
  font-size: 280%;
}

#circle-container{
  width: 300px;
  height: 300px;
  padding: 30px;
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-radius: 50%;
  margin: 0 auto;
}

#circle-cover-bg{
  background: url("../images/ethos-photo.jpg") no-repeat center center;
  height: 100%;
  border-radius: 50%;
}

/* Area covered section styling with heading and map */
#area-covered{
  width: 85%;
  margin: auto;
 }

 #map-welcome{
  margin: 20px 0;
  text-align: center;
  font-size: 280%;
}

/* Footer section styling with social media links */
footer{
    height: 150px;
}

.social-networks{
    text-align: center;

}

.social-networks li{
    display: inline;
}

.social-networks i{
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #777777;
}

/* Contact form styling */
.contact-section{
  clear: left;
  background: url("../images/contact-background.jpg");
  background-size: cover;
  background-position: center;
  height: 900px;
}

.contact-form{
    margin-top: 150px;
    color: #fff;
    background-color: rgba(60, 60, 60, 0.6);
    max-width: 400px;
    position: absolute;
    left: 10%;
    padding: 30px;  
}

.contact-form h2{
    color: #fafafa;
    margin-bottom: 20px;
}

.text-input{
  background: transparent;
  color: #fafafa;
  width: 100%;
  height: 25px;
  margin: 5px 0 20px 0;
  border: 1px solid #fafafa;
  border-radius: 2px;
}

.text-input:hover{
  border-color: #f16c6b;
}

.contact-button{
  margin-top: 20px;
  border-radius: 2px;
  padding: 15px 32px 15px 32px;
  text-align: center;
  font-size: 100%;
  background-color: #f16c6b;
  color: #fafafa;
  display: block;
}

.contact-button:hover{
  background-color: #fafafa;
  color: #f16c6b;
}

/* Price list page styling */
#prices-section{
  clear: left;
  background: url("../images/prices-background.jpg");
  background-size: cover;
  background-position: center;
  height: 600px;
}

#prices-info{
  margin-top: 100px;
  color: #fff;
  background-color: rgba(60, 60, 60, 0.6);
  max-width: 500px;
  position: absolute;
  left: 10%;
  padding: 30px;
}

#prices-info h2{
  color: #fafafa;
  margin-bottom: 20px;
}

#prices-info table{
  border: 2px solid;
  width: 75%;
  border-collapse: collapse;
  margin-bottom: 10px;
}

#prices-info tr:nth-child(even){
  background-color: rgba(70, 70, 70, 0.6);
}

#prices-info tr:hover{
  background-color: #f16c6b;
}

#prices-info th{
  border: 2px solid;
  height: 40px;
}

#prices-info td{
  border: 1px solid;
  text-align: center;
  height: 30px;
}

#prices-size-key{
  margin-bottom: 10px;
}

/* Gallery page styling */
#gallery-photos{
  clear: both;
  line-height: 0;
  column-count: 4;
  column-gap: 0px;
}

#gallery-photos img{
  width: 100%;
}

/* Media queries */
@media screen and (max-width: 1200px){
  #groom-ethos{
    width: 65%;
    height: 1200px;
    margin: 0 auto;
  }

  #welcome{
    padding: 30px 0;
    margin-top: 0;
  }

  #left-about, #right-about{
    width: 100%;
    float: left;
    padding: 0;
  }

  #center-about{
    clear: both;
    width: 100%;
    float: left;
    padding: 0;
  }

  hr{
    display: none;
  }

  #area-covered{
    width: 65%;
  }
}

@media screen and (max-width: 943px){
  #menu{
    clear: left;
    float: left;
    margin-left: 30px;
    margin-bottom: 20px;
    line-height: 25px;
  }

  #cover-text{
    left: 0px;
  }

  #groom-ethos{
    width: 90%;
    height: 1200px;
    margin: 0 auto;
  }

  .left-about-heading, .right-about-heading{
    width: inherit;
  }
  
  .left-about-heading h2, .right-about-heading h2{
    width: 100%;
    text-align: center;
  }

  .left-about-heading p, .right-about-heading p{
    text-align: center;
    padding: 0 20px 0 20px;
  }

  #gallery-photos{
    column-count: 3;
  }

  #area-covered{
    overflow-y: hidden;
    overflow-x: auto;
  }
}

@media screen and (max-width: 800px){
  #gallery-photos{
    column-count: 2;
  }
}

